# waczlib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/waczlib/: helpers.py  wacz.py
test_assets/: invalid-checksum.wacz  invalid-datapackage.wacz  invalid-pages.wacz  no-archives.wacz  no-datapackage.wacz  no-pages.wacz  valid-example.wacz
tests/: test_wacz.py
