[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waczlib"
version = "0.0.1"
authors = [
    { name="Oskar Jauch", email="oskar.jauch@posteo.de" },
]
description = "Library for validating wacz archives and reading their metadata"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ojauch/waczlib"
"Bug Tracker" = "https://github.com/ojauch/waczlib/issues"